--- a/.gitmodules
+++ b/.gitmodules
@@ -1,51 +1,51 @@
 [submodule "Appium-HCP"]
 	path = Appium-HCP
-	url = https://github.com/gopokyo-colinn/appium-hcp
+	url = https://github.com/FastQuagga/appium-hcp
 [submodule "Appium-HCP-Driver"]
 	path = Appium-HCP-Driver
-	url = https://github.com/gopokyo-colinn/appium-hcp-driver
+	url = https://github.com/FastQuagga/appium-hcp-driver
 [submodule "Appium"]
 	path = Appium
-	url = https://github.com/gopokyo-colinn/appium
+	url = https://github.com/FastQuagga/appium
 [submodule "Appium-DotNet-Driver"]
 	path = Appium-DotNet-Driver
-	url = https://github.com/gopokyo-colinn/appium-dotnet-driver
+	url = https://github.com/FastQuagga/appium-dotnet-driver
 [submodule "Appium-Base-Driver"]
 	path = Appium-Base-Driver
-	url = https://github.com/gopokyo-colinn/appium-base-driver
+	url = https://github.com/FastQuagga/appium-base-driver
 [submodule "Requisition"]
 	path = Requisition
-	url = https://github.com/gopokyo-colinn/requisition
+	url = https://github.com/FastQuagga/requisition
 [submodule "Appium-Dot-Exe"]
 	path = Appium-Dot-Exe
-	url = https://github.com/gopokyo-colinn/appium-dot-exe
+	url = https://github.com/FastQuagga/appium-dot-exe
 [submodule "Appium-Android-Driver"]
 	path = Appium-Android-Driver
-	url = ../../gopokyo-colinn/appium-android-driver
+	url = ../../FastQuagga/appium-android-driver
 [submodule "Appium-Android-Bootstrap"]
 	path = Appium-Android-Bootstrap
-	url = ../../gopokyo-colinn/appium-android-bootstrap
+	url = ../../FastQuagga/appium-android-bootstrap
 [submodule "Appium-IOS-Driver"]
 	path = Appium-IOS-Driver
-	url = https://github.com/gopokyo-colinn/appium-ios-driver
+	url = https://github.com/FastQuagga/appium-ios-driver
 [submodule "Selenium"]
 	path = Selenium
-	url = https://github.com/gopokyo-colinn/selenium
+	url = https://github.com/FastQuagga/selenium
 [submodule "Appium-Dot-App"]
 	path = Appium-Dot-App
-	url = https://github.com/gopokyo-colinn/appium-dot-app
+	url = https://github.com/FastQuagga/appium-dot-app
 [submodule "SpecFlow"]
 	path = SpecFlow
-	url = https://github.com/gopokyo-colinn/SpecFlow
+	url = https://github.com/FastQuagga/SpecFlow
 [submodule "Appium-UIAutomator2-Driver"]
 	path = Appium-UIAutomator2-Driver
-	url = https://github.com/gopokyo-colinn/appium-uiautomator2-driver
+	url = https://github.com/FastQuagga/appium-uiautomator2-driver
 [submodule "Appium-XCUITest-Driver"]
 	path = Appium-XCUITest-Driver
-	url = https://github.com/gopokyo-colinn/appium-xcuitest-driver
+	url = https://github.com/FastQuagga/appium-xcuitest-driver
 [submodule "Appium-UnityTest"]
 	path = Appium-UnityTest
-	url = https://github.com/gopokyo-colinn/appium-unity-test
+	url = https://github.com/FastQuagga/appium-unity-test
 [submodule "Appium-Unity"]
 	path = Appium-Unity
-	url = https://github.com/gopokyo-colinn/appium-unity
+	url = https://github.com/FastQuagga/appium-unity
