F! add unityEditor-driver submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,9 +19,6 @@
 [submodule "Appium-Dot-Exe"]
 	path = Appium-Dot-Exe
 	url = https://github.com/FastQuagga/appium-dot-exe
-[submodule "Appium-UnityEditor-Driver"]
-	path = Appium-Dot-Exe
-	url = https://github.com/FastQuagga/appium-unityeditor-driver
 [submodule "Appium-Android-Driver"]
 	path = Appium-Android-Driver
 	url = ../../FastQuagga/appium-android-driver
@@ -52,3 +49,6 @@
 [submodule "Appium-Unity"]
 	path = Appium-Unity
 	url = https://github.com/FastQuagga/appium-unity
+[submodule "Appium-UnityEditor-Driver"]
+	path = Appium-UnityEditor-Driver
+	url = https://github.com/FastQuagga/appium-unityeditor-driver.git
