--- a/.gitmodules
+++ b/.gitmodules
@@ -24,7 +24,7 @@
 	url = ../../FastQuagga/appium-android-driver
 [submodule "Appium-Android-Bootstrap"]
 	path = Appium-Android-Bootstrap
-	url = ../../gopokyo-colinn/appium-android-bootstrap
+url=https://github.com/appium/appium-android-bootstrap
 [submodule "Appium-IOS-Driver"]
 	path = Appium-IOS-Driver
 	url = https://github.com/FastQuagga/appium-ios-driver
